<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/title_name"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ltitle_name"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/province"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>

    <Spinner
        android:id="@+id/select_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp">

    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>

    <Spinner
        android:id="@+id/select_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp">

    </Spinner>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/password_name"/>

    <Button
        android:id="@+id/register_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/logonbtn_name"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_btn"
        />



</LinearLayout>