<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/make_announcement"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/colorBulue"-->
    <!--android:gravity="center"-->
    <!--android:theme="@style/AppTheme"-->
    <!--app:titleTextAppearance="@style/Toolbar.TitleText" />-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <TextView
            android:id="@+id/message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text="@string/message_title" />

        <EditText
            android:id="@+id/message_title_editText"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/message_hint"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/message_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text="@string/message_time" />

        <EditText
            android:id="@+id/message_time_deitText"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginLeft="10dp"
            android:editable="false"
            android:hint="点击选择时间"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/message_conter"
            android:textSize="22dp" />


        <EditText
            android:id="@+id/message_conter"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_style"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:textColor="@color/colorBlack"
            android:textCursorDrawable="@drawable/back"
            />


        <TextView
            android:id="@+id/message_office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text="@string/message_office" />

        <EditText
            android:id="@+id/message_office_deitText"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginLeft="10dp"
            android:hint="如:科学校区活动中心楼113室"
            android:textSize="16dp" />


        <Button
            android:id="@+id/message_up"
            style="?android:textAppearanceSmall"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="#5f0f0000"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="65dp"
            android:text="@string/message_up"

            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#ffffff"/>

    </LinearLayout>





</LinearLayout>
